[gd_scene load_steps=9 format=2]

[ext_resource path="res://breeding_machine/BreedingBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://breeding_machine/BreedingOutput.tscn" type="PackedScene" id=2]
[ext_resource path="res://breeding_machine/BreedingButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://breeding_machine/BreedingMachine.gd" type="Script" id=4]
[ext_resource path="res://breeding_machine/breed_sign.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 19, 5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 19, 0, 19, 5 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="BreedingMachine" type="Node2D"]
script = ExtResource( 4 )

[node name="BreedingBoxLeft" parent="." instance=ExtResource( 1 )]
position = Vector2( -17, 0 )

[node name="BreedingBoxRight" parent="." instance=ExtResource( 1 )]
position = Vector2( 17, 0 )

[node name="BreedingOutput" parent="." instance=ExtResource( 2 )]
position = Vector2( 59, 14 )

[node name="BreedingButton" parent="." instance=ExtResource( 3 )]
position = Vector2( -3.5, 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 6.5, 13 )
frames = SubResource( 3 )
centered = false

[connection signal="dropped" from="BreedingBoxLeft" to="." method="_on_BreedingBoxLeft_dropped"]
[connection signal="pulled" from="BreedingBoxLeft" to="." method="_on_BreedingBoxLeft_pulled"]
[connection signal="dropped" from="BreedingBoxRight" to="." method="_on_BreedingBoxRight_dropped"]
[connection signal="pulled" from="BreedingBoxRight" to="." method="_on_BreedingBoxRight_pulled"]
[connection signal="released" from="BreedingButton" to="." method="_on_BreedingButton_released"]
